<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactCard"
    tools:showIn="@layout/activity_contact_card">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/forename"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="@string/forename"
                android:textSize="36sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="0"
                android:text="@string/name"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp">
            </Space>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/phoneNumber"
                android:textSize="30sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/mailAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/mailAddr"
                android:textSize="18sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_dialog_email" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/postalAddrRoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/postalAddrRoad" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_dialog_map" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp">

            <EditText
                android:id="@+id/postalAddrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/postalAddrCode" />

            <EditText
                android:id="@+id/postalAddrCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/postalAddrCity" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp">
            </Space>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textLongMessage"
                android:text="@string/note" />
        </TableRow>

    </TableLayout>


</androidx.core.widget.NestedScrollView>